[WIP] [SPO] [UI/UX] Align the layout/colors/styles with the other actors #357 | Fixed [SPO] [UI/UX] Not all trials are visible #351

--- a/src/components/datatable.css
+++ b/src/components/datatable.css
@@ -3,10 +3,12 @@
     align-content: start;
     min-height: 325px;
 }
+
 .common-datatable .webc-datatable--container > * {
     padding: 0.5rem;
     border-bottom: 1px solid #CDCDCD;
 }
+
 .common-datatable .webc-datatable--container > .webc-datatable--header {
     font-weight: bold;
     border-color: #2F2F2F;
@@ -15,6 +17,7 @@
     border-bottom: 1px solid #000;
     padding: 0.5rem 0 0.5rem 0;
 }
+
 .common-datatable .webc-datatable--container webc-spinner {
     align-self: center;
 }
@@ -23,6 +26,7 @@
     display: flex;
     justify-content: center;
 }
+
 .common-datatable .controls > button {
     margin: 1rem 0.5rem 0 0;
     border: 1px solid transparent;
@@ -30,21 +34,56 @@
 }
 
 .common-datatable webc-datatable div.cell {
-   background: #cfe8eb;
-   display: flex;
-   align-items: center;
+    background: #cfe8eb;
+    display: flex;
+    align-items: center;
+    column-gap: 0.25rem;
 }
 
-.trials-list-table .webc-datatable--container {
+.dt-2-col,
+.dt-3-col,
+.dt-4-col,
+.dt-5-col,
+.dt-6-col,
+.dt-7-col,
+.dt-8-col,
+.dt-9-col {
     display: grid;
-    align-items: baseline;
+    align-content: start;
+    min-height: 325px;
+}
+
+.dt-2-col .webc-datatable--container {
+    grid-template-columns: 1fr 1fr;
+}
+
+.dt-3-col .webc-datatable--container {
+    grid-template-columns: repeat(2, 1fr) 2fr;
+}
+
+.dt-4-col .webc-datatable--container {
+    grid-template-columns: repeat(3, 1fr) 2fr;
+}
+
+.dt-5-col .webc-datatable--container {
     grid-template-columns: repeat(4, 1fr) 2fr;
 }
 
-.dt-4-col webc-datatable div.cell:nth-child(8n+1),
-.dt-4-col webc-datatable div.cell:nth-child(8n+2),
-.dt-4-col webc-datatable div.cell:nth-child(8n+3),
-.dt-4-col webc-datatable div.cell:nth-child(8n+4),
+.dt-6-col .webc-datatable--container {
+    grid-template-columns: repeat(5, 1fr) 2fr;
+}
+
+.dt-7-col .webc-datatable--container {
+    grid-template-columns: repeat(6, 1fr) 2fr;
+}
+
+.dt-8-col .webc-datatable--container {
+    grid-template-columns: repeat(7, 1fr) 2fr;
+}
+
+.dt-9-col .webc-datatable--container {
+    grid-template-columns: repeat(8, 1fr) 2fr;
+}
 
 .dt-2-col webc-datatable div.cell:nth-child(4n+1),
 .dt-2-col webc-datatable div.cell:nth-child(4n+2),
@@ -52,6 +91,11 @@
 .dt-3-col webc-datatable div.cell:nth-child(6n+1),
 .dt-3-col webc-datatable div.cell:nth-child(6n+2),
 .dt-3-col webc-datatable div.cell:nth-child(6n+3),
+
+.dt-4-col webc-datatable div.cell:nth-child(8n+1),
+.dt-4-col webc-datatable div.cell:nth-child(8n+2),
+.dt-4-col webc-datatable div.cell:nth-child(8n+3),
+.dt-4-col webc-datatable div.cell:nth-child(8n+4),
 
 .dt-5-col webc-datatable div.cell:nth-child(10n+1),
 .dt-5-col webc-datatable div.cell:nth-child(10n+2),
@@ -91,113 +135,11 @@
 .dt-9-col webc-datatable div.cell:nth-child(18n+6),
 .dt-9-col webc-datatable div.cell:nth-child(18n+7),
 .dt-9-col webc-datatable div.cell:nth-child(18n+8),
-.dt-9-col webc-datatable div.cell:nth-child(18n+9)
-
-
-{
+.dt-9-col webc-datatable div.cell:nth-child(18n+9) {
     background: #c2ced8;
-    margin:0.25rem 0;
+    margin: 0.25rem 0;
 }
 
-
-.notes-datatable .webc-datatable--container{
-    grid-template-columns: 100px 3fr 5fr;
-}
-
-.feedback-datatable .webc-datatable--container{
-    grid-template-columns: 4fr  1fr 100px;
-}
-
-.evidence-datatable .webc-datatable--container{
-    grid-template-columns: repeat(6, 1fr);
-}
-
-.questions-datatable .webc-datatable--container{
-    grid-template-columns: repeat(3, 1fr);
-}
-
-.two-column-datatable .webc-datatable--container {
-    grid-template-columns: repeat(2, 1fr);
-}
-
-.answers-datatable .webc-datatable--container{
-    grid-template-columns: repeat(4, 1fr);
-}
-
-.cs-datatable .webc-datatable--container {
-    display: grid;
-    grid-template-columns: 3fr 2fr 1.5fr 400px;
-    align-content: start;
-    min-height: 325px;
-}
-
-.webc-datatable--container label[data-tag]{
+.webc-datatable--container label[data-tag] {
     padding: 0.125rem 0.75rem;
-}
-
-.trial-management .webc-datatable--container {
-    display: grid;
-    grid-template-columns: repeat(7, 2fr) 3fr;
-    align-content: start;
-    min-height: 325px;
-}
-
-.trial-management.common-datatable .webc-datatable--container > .webc-datatable--header {
-    border-bottom: 1px solid #CDCDCD;
-    padding: 0.5rem;
-}
-
- .trial-management.common-datatable webc-datatable div.cell {
-    display: flex;
-    align-items: center;
-    justify-content: flex-start;
- }
-
- .trial-participant .webc-datatable--container {
-    display: grid;
-    grid-template-columns: repeat(5, 2fr) 3fr;
-    align-content: start;
-    min-height: 325px;
-}
-
-.econsents .webc-datatable--container {
-    display: grid;
-    grid-template-columns: repeat(6, 2fr) 3fr;
-    align-content: start;
-    min-height: 325px;
-}
-
-.trial-participant-details .webc-datatable--container {
-    display: grid;
-    grid-template-columns: repeat(4, 2fr);
-    align-content: start;
-    min-height: 325px;
-}
-
-.consents-table .webc-datatable--container {
-    display: grid;
-    grid-template-columns: 3fr repeat(4, 2fr);
-    align-content: start;
-    min-height: 325px;
-}
-
-.econsents-versions-table .webc-datatable--container {
-    display: grid;
-    grid-template-columns: repeat(4, 2fr) 3fr;
-    align-content: start;
-    min-height: 325px;
-}
-
-.visits-procedures .webc-datatable--container {
-    display: grid;
-    grid-template-columns: repeat(8, 2fr) 3fr;
-    align-content: start;
-    min-height: 325px;
-}
-
-.cell[data-empty] {
-    height: 3rem;
-    pointer-events: none;
-    opacity:0;
-    border:none;
 }
