--- a/src/sections/container.css
+++ b/src/sections/container.css
@@ -97,7 +97,7 @@ webc-app-container .container {
 .container.main-container .container {
     margin-left: auto;
     margin-right: auto;
-    row-gap: 2rem;
+    row-gap: 1rem;
 }
 
 .container.main-container > .container {
